# ayuda_direct

./: .gitignore  LICENSE  PRODUCT.md  README.md
.claude/: launch.json
contracts/ayuda_direct/: Cargo.toml
contracts/ayuda_direct/src/: lib.rs  test.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BalanceCard.tsx  SendXLMForm.tsx  WalletPanel.tsx
frontend/src/hooks/: useStellarWallet.ts
frontend/src/lib/: stellar.ts
