[package]
name = "ayuda_direct"
version = "0.1.0"
edition = "2021"
authors = ["Lance Jericho Salcedo"]
license = "MIT"
description = "Direct, leak-proof cash assistance (ayuda) on Stellar/Soroban"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21"

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true